--- a/ZenboDacing/src/main/res/layout/activity_main.xml
+++ b/ZenboDacing/src/main/res/layout/activity_main.xml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.robot.asus.ZenboDacing.MainActivity">
+    android:orientation="horizontal">
 
-    <TextView
-        android:text="Hello World! "
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:background="#72E91E63"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:id="@+id/lady">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="LADY"
+            android:textColor="#FFFFFF"
+            android:textSize="90sp" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="fill_parent"
+        android:background="#C92196F3"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:id="@+id/man">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="MAN"
+            android:textColor="#FFFFFF"
+            android:textSize="90sp" />
+
+    </LinearLayout>
+</LinearLayout>
