--- a/ZenboDacing/src/main/res/layout/activity_dance.xml
+++ b/ZenboDacing/src/main/res/layout/activity_dance.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.robot.asus.ZenboDacing.DanceActivity"
-    android:id="@+id/start">
-
-</android.support.constraint.ConstraintLayout>
+    android:orientation="horizontal"
+    android:gravity="center">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/start"
+        android:textSize="150sp"
+        android:text="Start"/>
+</LinearLayout>
